--- a/templates/confirm-email.html
+++ b/templates/confirm-email.html
@@ -31,7 +31,7 @@
         "data-ga-action": "Submit",
         "data-ga-label": "Confirm",
         "data-ga-page": "Confirmation Email",
-        "data-ga": "click"
+        "data-ga": "click",
       }
     })
   }}
