--- a/templates/feedback-sent.html
+++ b/templates/feedback-sent.html
@@ -30,7 +30,7 @@
                 "data-ga-action": "Submit",
                 "data-ga-label": "Done",
                 "data-ga-page": "Feedback",
-                "data-ga": "click"
+                "data-ga": "click",
             }
         })
     }}
