--- a/templates/individual_response/confirmation-post.html
+++ b/templates/individual_response/confirmation-post.html
@@ -27,7 +27,7 @@
                 "data-ga-action": "Submit",
                 "data-ga-label": "Confirmation Post Continue",
                 "data-ga-page": "Individual Response",
-                "data-ga": "click"
+                "data-ga": "click",
             }
         })
     }}
