--- a/templates/individual_response/confirmation-text-message.html
+++ b/templates/individual_response/confirmation-text-message.html
@@ -35,7 +35,7 @@
                 "data-ga-action": "Submit",
                 "data-ga-label": "Confirmation Text Message Continue",
                 "data-ga-page": "Individual Response",
-                "data-ga": "click"
+                "data-ga": "click",
             }
         })
     }}
