--- a/templates/individual_response/interstitial.html
+++ b/templates/individual_response/interstitial.html
@@ -19,7 +19,7 @@
                 "data-ga-category": "Button",
                 "data-ga-action": "Submit",
                 "data-ga-label": "Request Separate Census",
-                "data-ga": "click"
+                "data-ga": "click",
             }
         })
     }}
