--- a/templates/layouts/_calculatedsummary.html
+++ b/templates/layouts/_calculatedsummary.html
@@ -24,7 +24,7 @@
         "data-ga-action": "Submit",
         "data-ga-label": "Confirm",
         "data-ga-page": "Calculated Summary",
-        "data-ga": "click"
+        "data-ga": "click",
       }
     })
   }}
