--- a/templates/layouts/_questionnaire.html
+++ b/templates/layouts/_questionnaire.html
@@ -30,7 +30,7 @@
                     "data-ga-action": "Submit",
                     "data-ga-label": "Save and Continue",
                     "data-ga-page": "Questionnaire",
-                    "data-ga": "click"
+                    "data-ga": "click",
                 }
             })
         }}
