--- a/templates/layouts/_submit.html
+++ b/templates/layouts/_submit.html
@@ -44,7 +44,7 @@
           "data-ga-action": "Submit",
           "data-ga-label": "Submit",
           "data-ga-page": "Questionnaire",
-          "data-ga": "click"
+          "data-ga": "click",
         }
       })
     }}
