--- a/templates/layouts/configs/_header.html
+++ b/templates/layouts/configs/_header.html
@@ -23,7 +23,7 @@
             "data-ga-action": header_button_data_ga_action,
             "data-ga-label": header_button_data_ga_label,
             "data-ga-page": "Questionnaire",
-            "data-ga": "click"
+            "data-ga": "click",
         },
         "iconType": "exit",
         "iconPosition": "after"
