--- a/templates/partials/answer-guidance.html
+++ b/templates/partials/answer-guidance.html
@@ -10,7 +10,7 @@
     "data-ga-action": "View",
     "data-ga-label": "Answer Guidance",
     "data-ga-page": "Questionnaire",
-    "data-qa": "answer-guidance-" ~ answer.id ~ "-title"
+    "data-qa": "answer-guidance-" ~ answer.id ~ "-title",
   },
   "contentAttributes": {
     "data-qa": "answer-guidance-" ~ answer.id ~ "-content"
