--- a/templates/partials/confirmation-email-form.html
+++ b/templates/partials/confirmation-email-form.html
@@ -45,7 +45,7 @@
       "data-ga-action": "Submit",
       "data-ga-label": "Send",
       "data-ga-page": "Confirmation Email",
-      "data-ga": "click"
+      "data-ga": "click",
     }
   })
 }}
