--- a/templates/partials/definition.html
+++ b/templates/partials/definition.html
@@ -10,7 +10,7 @@
     "data-ga-action": "View",
     "data-ga-label": "Definition",
     "data-ga-page": "Questionnaire",
-    "data-qa": definition_id ~ "-title"
+    "data-qa": definition_id ~ "-title",
   },
   "contentAttributes": {
     "data-qa": definition_id ~ "-content"
