--- a/templates/partials/individual-response-guidance.html
+++ b/templates/partials/individual-response-guidance.html
@@ -8,7 +8,7 @@
     "data-ga-category": "Accordion",
     "data-ga-action": "View",
     "data-ga-label": "Open Definition",
-    "data-ga-page": "Individual Response"
+    "data-ga-page": "Individual Response",
   }
 }) %}
   <div class="ons-u-mt-s">
