--- a/templates/partials/introduction/start-survey.html
+++ b/templates/partials/introduction/start-survey.html
@@ -12,7 +12,7 @@
       "data-ga-action": "Start",
       "data-ga-label": "Start Survey",
       "data-ga-page": "Introduction",
-      "data-ga": "click"
+      "data-ga": "click",
     }
   })
 }}
