--- a/templates/partials/question.html
+++ b/templates/partials/question.html
@@ -30,7 +30,7 @@
       "data-ga-action": "View",
       "data-ga-label": "Question Definition",
       "data-ga-page": "Questionnaire",
-      "data-qa": definition_id ~ "-title"
+      "data-qa": definition_id ~ "-title",
     },
     "contentAttributes": {
       "data-qa": definition_id ~ "-content"
