--- a/templates/partials/summary/collapsible-summary.html
+++ b/templates/partials/summary/collapsible-summary.html
@@ -54,7 +54,7 @@
         "data-ga-category": "Button",
         "data-ga-action": "View",
         "data-ga-label": "Collapsible Answers",
-        "data-ga-page": "Summary"
+        "data-ga-page": "Summary",
       }
   },
   "itemsList": itemList
