--- a/templates/preview.html
+++ b/templates/preview.html
@@ -55,7 +55,7 @@
         "data-ga-action": "View",
         "data-ga-label": "Print Dialogue",
         "data-ga-page": "Preview",
-        "data-ga": "click"
+        "data-ga": "click",
       }
     })
   }}
@@ -71,7 +71,7 @@
         "data-ga-action": "Download",
         "data-ga-label": "Download PDF",
         "data-ga-page": "Preview",
-        "data-ga": "click"
+        "data-ga": "click",
       }
     })
   }}
@@ -102,7 +102,7 @@
               "data-ga-category": "Button",
               "data-ga-action": "View",
               "data-ga-label": "Show all",
-              "data-ga-page": "Preview"
+              "data-ga-page": "Preview",
             }
           },
           "itemsList": itemList
