--- a/templates/sectionsummary.html
+++ b/templates/sectionsummary.html
@@ -14,7 +14,7 @@
       "data-ga-action": "Submit",
       "data-ga-label": "Continue",
       "data-ga-page": "Section Summary",
-      "data-ga": "click"
+      "data-ga": "click",
     }
   })
 }}
@@ -56,7 +56,7 @@
         "data-ga-action": "Submit",
         "data-ga-label": "Continue",
         "data-ga-page": "Section Summary",
-        "data-ga": "click"
+        "data-ga": "click",
       }
     })
   }}
