--- a/templates/thank-you.html
+++ b/templates/thank-you.html
@@ -18,7 +18,7 @@
           "data-ga-category": "Link",
           "data-ga-action": "Navigate",
           "data-ga-label": "Back to Surveys",
-          "data-ga-page": "Thank You"
+          "data-ga-page": "Thank You",
         }
       }
     ]
