--- a/templates/view-submitted-response.html
+++ b/templates/view-submitted-response.html
@@ -42,7 +42,7 @@
           "data-ga-action": "View",
           "data-ga-label": "Print Dialogue",
           "data-ga-page": "View Submitted Response",
-          "data-ga": "click"
+          "data-ga": "click",
         }
       })
     }}
@@ -58,7 +58,7 @@
           "data-ga-action": "Download",
           "data-ga-label": "Download PDF",
           "data-ga-page": "View Submitted Response",
-          "data-ga": "click"
+          "data-ga": "click",
         }
       })
     }}
