--- a/templates/interstitial.html
+++ b/templates/interstitial.html
@@ -37,7 +37,7 @@
                 "data-ga-action": "Submit",
                 "data-ga-label": "Save and Continue",
                 "data-ga-page": "Interstitial",
-                "data-ga": "click"
+                "data-ga": "click",
             }
         })
     }}
