Add missing commas

--- a/templates/partials/confirmation-email-form.html
+++ b/templates/partials/confirmation-email-form.html
@@ -12,7 +12,7 @@
       "data-ga-category": "Error",
       "data-ga-action": "Display",
       "data-ga-label": "Invalid / Missing Email",
-      "data-ga-page": "Confirmation Email"
+      "data-ga-page": "Confirmation Email",
     }
   } %}
 {% endif %}
