--- a/templates/view-submitted-response.html
+++ b/templates/view-submitted-response.html
@@ -19,7 +19,7 @@
         "data-ga-category": 'Link',
         "data-ga-action": 'Navigate',
         "data-ga-label": "Previous",
-        "data-ga-page": "View Submitted Response"
+        "data-ga-page": "View Submitted Response",
       }
     }
   ]
