--- a/templates/partials/answer.html
+++ b/templates/partials/answer.html
@@ -28,7 +28,7 @@
       "data-ga-label": "Answer Error",
       "data-ga-type": answer.type,
       "data-ga-identifier": question.id,
-      "data-ga-page": "Questionnaire"
+      "data-ga-page": "Questionnaire",
     }
   } %}
 {% endif %}
