--- a/templates/partials/question.html
+++ b/templates/partials/question.html
@@ -139,7 +139,7 @@
         "data-ga-label": "Question Error",
         "data-ga-type": question.type,
         "data-ga-identifier": question.id,
-        "data-ga-page": "Questionnaire"
+        "data-ga-page": "Questionnaire",
       }
     } %}
     {% call onsError(config) %}
